Version 2.0.3 (in development)
==============================

* Added release notes (*still being compiled*)

* Class wcs.Projection:

  * added attribute *category*

  * fixed ZPN projection related problem in method *mixed()*

* Changed to WCSLIB 4.5.3 (from 4.5)


Version 2.0.2 (Sep 16, 2010)
============================

* Class wcs.Projection:

  * allow for FITS headers that incorrectly represent EQUINOX as a string

  * added support for AIPS keyword VELREF

* Function mplutil.gipsy_connect() connects GIPSY keyword events
  to Matplotlib event loop.

* Added Microsoft Windows support.


Version 2.0.1 (Aug 11, 2010)
============================

* WCSLIB 4.5 included in distribution so
  it does not need to be separately installed anymore.

Version 2.0 (Jul 16, 2010)
==========================

* Class wcs.Projection:

  * added method *inside()*.

Version 1.9.2 (Jul 12, 2010)
============================

* Function wcs.coordmap(): added arguments *dst_shape*, *dst_offset*
  and *src_offset*.

* Class wcs.Projection:

  * fixed bug in class WrappedHeader.

  * allow for WSRT files with topocentric frequencies (via class WrappedHeader)

  * added attribute *altspecarg*.

* Added modules *rulers* and *shapes*.

* Included SciPy modules *filters* and *interpolation*. The latter was slightly
  modified.


Version 1.9.1 (Feb 25, 2010)
============================

* Class wcs.Projection:

  * added attribute *euler*.

  * fixed bug in method *mixed()*

* Class mplutil.VariableColormap:

  * added NumPy array as possible source.

  * added method *set_length()*



Version 1.9 (Jan 16, 2010)
==========================

* First public release.