@@ -11,6 +11,14 @@ Version 2.0.3 (in development)
 
 * Changed to WCSLIB 4.5.3 (from 4.5)
 
+* Module maputils:
+
+  * added new class *Skypolygon* for plotting shapes like ellipses,
+    rectangles and regular polygons. For these shapes
+    angles and distances along a great circle are preserved.
+    This class can be used for example to draw footprints on all-sky
+    plots or a beam to show the resolution of an instrument.
+
 
 Version 2.0.2 (Sep 16, 2010)
 ============================
